--- a/install
+++ b/install
@@ -2,8 +2,24 @@
 
 DOTFILES=$(cd $(dirname "${BASH_SOURCE[0]}") && pwd)
 
-rm -rf $HOME/.aliases
+[ -f $HOME/.aliases ] && rm -rf $HOME/.aliases
 ln -s $DOTFILES/.aliases $HOME/.aliases
 
-rm -rf $HOME/.czrc
+[ -f $HOME/.functions ] && rm -rf $HOME/.functions
+ln -s $DOTFILES/.functions $HOME/.functions
+
+[ -f $HOME/.czrc ] && rm -rf $HOME/.czrc
 ln -s $DOTFILES/.czrc $HOME/.czrc
+
+[ -f $HOME/.zshrc ] && rm -rf $HOME/.zshrc
+ln -s $DOTFILES/.zshrc $HOME/.zshrc
+
+
+
+
+
+
+
+
+
+source $HOME/.zshrc
