--- a/install
+++ b/install
@@ -8,20 +8,18 @@ ln -s $DOTFILES/.aliases $HOME/.aliases
 [[ -f "$HOME/.functions" ]] && rm -rf $HOME/.functions
 ln -s $DOTFILES/.functions $HOME/.functions
 
+[[ -f "$HOME/.zshrc" ]] && rm -rf $HOME/.zshrc
+ln -s $DOTFILES/.zshrc $HOME/.zshrc
+
+[[ -d "$HOME/.config/nvim" ]] && rm -rf $HOME/.config/nvim
+ln -s $DOTFILES/nvim $HOME/.config/nvim
+
+[[ -f "$HOME/.gitconfig" ]] && rm -rf $HOME/.gitconfig
+ln -s $DOTFILES/git/.gitconfig $HOME/.gitconfig
+
 [[ -f "$HOME/.czrc" ]] && rm -rf $HOME/.czrc
 ln -s $DOTFILES/.czrc $HOME/.czrc
 
 [[ -d "$HOME/.fig/config" ]] && rm -rf $HOME/.fig/config
 ln -s $DOTFILES/.fig/config $HOME/.fig/config
 
-
-
-
-
-
-
-
-[[ -f "$HOME/.zshrc" ]] && rm -rf $HOME/.zshrc
-ln -s $DOTFILES/.zshrc $HOME/.zshrc
-
-# source $HOME/.zshrc
