--- a/install
+++ b/install
@@ -28,6 +28,8 @@ ln -s $DOTFILES/kitty $HOME/.config/kitty
 rm -rf $HOME/.tmux.conf
 ln -s $DOTFILES/tmux/tmux.conf $HOME/.tmux.conf
 
+tmux-session restore
+
 [[ ! -d $HOME/.local/bin ]] && mkdir -p $HOME/.local/bin
 
 rm -rf $HOME/.local/bin/t
