Changed theme and added plugins

--- a/install
+++ b/install
@@ -32,12 +32,15 @@ ln -s $DOTFILES/tmux/plugins $HOME/.tmux/plugins
 rm -rf $HOME/.tmux.conf
 ln -s $DOTFILES/tmux/tmux.conf $HOME/.tmux.conf
 
-tmux-session restore
+# tmux-session restore
 
 [[ ! -d $HOME/.local/bin ]] && mkdir -p $HOME/.local/bin
 
 rm -rf $HOME/.local/bin/t
 ln -s $DOTFILES/scripts/t $HOME/.local/bin/t
+
+rm -rf $HOME/.config/phpactor
+ln -s $DOTFILES/phpactor $HOME/.config/phpactor
 
 if [ ! -d $HOME/.oh-my-zsh ]; then
     KEEP_ZSHRC=yes sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"
